--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&family=Raleway:ital@0;1&display=swap" rel="stylesheet">
+    <link rel="icon" href="images/favicon.ico">
     <title>About Me</title>
 </head>
 <body>
     <h1> Maureen Oldyck </h1> 
 
-<p><em>“There are far, far better things ahead than any we leave behind.”
+<p class= "quote"><em>“There are far, far better things ahead than any we leave behind.”
     ― C.S. Lewis </em></p> 
 
 <br>
@@ -22,9 +23,10 @@
 <p> An introverted gemini, with a passion for learning new things, trying to beat the procrastinator in her.    </p>
 
 <br>
+<hr>
 
 <h2> Q&A </h2>
-<table> 
+<table class="center"> 
     <tr>
         <th>Birthday</th> 
         <td> 12 June </td>
@@ -44,9 +46,10 @@
 </table>
    
 <br> 
+<hr>
 
 <h2>Hobbies</h2>
-<ul> 
+<div class="list"> <ul> 
 <li> Playing Boardgames  </li>
 <li> Hiking in the forest </li>
 <li> Geocaching </li>
@@ -55,11 +58,13 @@
     <li> Squash </li> </ul> 
 </li>
 </ul>
+</div>
 
-<br>
+<hr>
 
 <h2> You can always count on me when you need a listening ear. </h2>   
-<br>
+
+<hr>
 
 <h2> A (not so) funny story about me </h2>
 <p> When I was just a little girl, my parents decided that it was a smart idea to go biking. So I followed along with my little bike and my training wheels. However, because the bike path in my neighbourhood where I live was very bad (it sloped to the right), I basically tipped over into the ditch full of stinging nettels. My whole body was itchy for a week and it took me a long time before I was able to trust the bike path again. Even until this day I have scars from the nettels and a fear of falling. </p>
