--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 <br>
 <br>
-<p class="footer"> &#60;&#60; <a href="https://github.com/Vicible2/Markdown-challenge/blob/main/Ex1_Markdown/README.md">previous</a> || MAUREEN OLDYCK || <a href="https://github.com/RenV123/markdown-challenge">next</a> &#62;&#62; </p>
+<p class="footer"> &#60;&#60; <a href="https://vicible2.github.io/markdown-warmup-css/">previous</a> || MAUREEN OLDYCK || <a href="https://renv123.github.io/markdown-warmup-css/">next</a> &#62;&#62; </p>
     
 </body>
 </html>
